# translate

./: .env-sample  .gitignore  README.md  main.py  mic-avaiable-list.py  pyproject.toml  record-loop.ps1  setup.py  translate-mic-audio.py
src/: ConfigObject.py  MicrophoneObject.py  OpenAIObject.py  TranslatorObject.py  WhisperObject.py  audio_processor.py  config.py  env_setup.py  main.py  microphone.py  openai_setup.py  translator.py  whisper_setup.py
test-tools/: compress-video.py  mic-avaiable-list.py  record-loop.ps1  test-helsinki.py
